Project_3/src/objects/Diagnosis__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remedies__c</fullName>
        <label>Remedies</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>cID__c</fullName>
        <label>cID</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Diagnosis</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>cID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Diagnosis Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Diagnosis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>